<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".TableListTrainSt"
    tools:showIn="@layout/table_listtrainst">

    <TextView
        android:id="@+id/train"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/train_table"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/train_route"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/train"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/train_line"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/train_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/train_route"
        android:layout_alignBottom="@+id/train_route"
        android:layout_alignLeft="@+id/textView12"
        android:layout_alignStart="@+id/textView12"
        android:text="@string/num"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/train_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/train_route"
        android:layout_alignBottom="@+id/train_route"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:text="@string/train_type"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="65dp"
        android:text="@string/order"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView11"
        android:layout_alignBottom="@+id/textView11"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="70dp"
        android:layout_marginStart="70dp"
        android:layout_toEndOf="@+id/textView11"
        android:layout_toRightOf="@+id/textView11"
        android:text="@string/train_st"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView14"
        android:layout_alignBottom="@+id/textView14"
        android:layout_alignEnd="@+id/train_type"
        android:layout_alignRight="@+id/train_type"
        android:text="@string/time_arriv"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView12"
        android:layout_alignBottom="@+id/textView12"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_toLeftOf="@+id/textView13"
        android:layout_toStartOf="@+id/textView13"
        android:text="@string/time_depart"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        tools:ignore="RelativeOverlap" />

    <ListView
        android:id="@+id/list_show_table"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView11" />

    <TextView
        android:id="@+id/num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/train_no"
        android:layout_alignBottom="@+id/train_no"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:text="@string/train_num"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="16sp"/>


</RelativeLayout>
