<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ListTrainSt"
    tools:showIn="@layout/listtrainst">

    <ListView
        android:id="@+id/selectst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/to"
        android:layout_marginTop="21dp" />

    <TextView
        android:id="@+id/train"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/st_from"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/train"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/st_to"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/Dstation1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/to"
        android:layout_alignTop="@+id/to"
        android:layout_toLeftOf="@+id/train"
        android:layout_toStartOf="@+id/train"
        android:text="@string/point"
        android:textColor="@color/colorPrimary"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/Dstation2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/to"
        android:layout_alignTop="@+id/to"
        android:layout_toEndOf="@+id/train"
        android:layout_toRightOf="@+id/train"
        android:text="@string/point"
        android:textColor="@color/colorPrimary"
        android:textSize="17sp" />


</RelativeLayout>
